# cblue

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  cbluetest.cpp  config.json
include/: BlueServer.h  agent.h  agentInf.h  hciManager.h  helper.h
src/: BlueServer.cpp  CMakeLists.txt  agent.cpp  cbluemain.cpp  hciManager.cpp  helper.cpp
test/: CMakeLists.txt  blueprox.cpp  client.cpp
